restructure the element in html, to allow teh user more options in searching

--- a/style.css
+++ b/style.css
@@ -10,7 +10,13 @@ div.display-container {
 }
 div.form-container {
     width: auto;
-    height:100px;
+    height:auto;
     border: dotted,1px,black;
     background-color: blanchedalmond;
+}
+
+.center {
+    margin: 0;
+    position: absolute;
+    left: 50%;
 }
