--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: rgb(25, 36, 187);
-    color: whitesmoke;
+    color: rgb(10, 10, 10);
 }
 h1 {
     text-align: center;
