--- a/style.css
+++ b/style.css
@@ -31,9 +31,9 @@ div.process-container {
     font-weight: 600;
     font-style: italic;
     color:brown;
-    background-repeat: repeat-y;
-    background-size: cover;
-    background-image: url("https://media.istockphoto.com/id/1437048444/photo/stars-background-space-galaxy.webp?b=1&s=170667a&w=0&k=20&c=AJLOKVnS_TNiLyMbu06zwGxAU1-OzI7p3cIBoqJZESc=");
+    /* background-repeat: repeat-y; */
+    background-size:contain;
+    /* background-image: url("https://media.istockphoto.com/id/1437048444/photo/stars-background-space-galaxy.webp?b=1&s=170667a&w=0&k=20&c=AJLOKVnS_TNiLyMbu06zwGxAU1-OzI7p3cIBoqJZESc="); */
 }
 div.form-container {
     width: auto;
