clean up the code ready for working on rest categories

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ div.process-container {
     width: 100%;
     height: auto;
     border: solid, 1px, black;
-    font-size: larger;
+    font-size:xx-large;
     font-weight: 600;
     font-style: italic;
     color:brown;
